--- a/_layouts/syntax.html
+++ b/_layouts/syntax.html
@@ -5735,7 +5735,6 @@
             text-align: left
         }
     </style>
-    <link type="text/css" rel="stylesheet" charset="UTF-8" href="https://github.com/jurliyuuri/lineparine/raw/master/images/translateelement.css">
 </head>
 
 <body class="c151 c226">
@@ -13210,7 +13209,7 @@
             </tr>
         </tbody>
     </table>
-    <h3 class="c34" id="h.laxb4qpwjxe"><span class="c73 c72">6.1.2. 부사의 급/span></h3>
+    <h3 class="c34" id="h.laxb4qpwjxe"><span class="c73 c72">6.1.2. 부사의 급</span></h3>
     <p class="c12"><span class="c0">리팔라인어의 부사는 형용사와 같이 급이 존재하며, 급 전치사는 형용사에서 사용된 방식과 똑같이 동작한다.</span></p>
     <p class="c12 c8"><span class="c0"></span></p><a id="t.b7d97d5d76e89816c724171c1f9282acc2091281"></a><a
         id="t.219"></a>
