--- a/_layouts/syntax.html
+++ b/_layouts/syntax.html
@@ -6289,7 +6289,7 @@
                 동사연체형 명사 (파생)</a></span><span class="c0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span
             class="c0"><a class="c26" href="{{ site.baseurl }}/syntax-lineparine/#h.94cnjznpbg74">65</a></span></p>
     <p class="c25"><span class="c0"><a class="c26" href="{{ site.baseurl }}/syntax-lineparine/#h.7tuijk9gls6f">5.4.3.
-                명사를 받는 동사연체형 명사</a></span><span class="c0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span
+                명사를 취하는 동사연체형 명사</a></span><span class="c0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span
             class="c0"><a class="c26" href="{{ site.baseurl }}/syntax-lineparine/#h.7tuijk9gls6f">66</a></span></p>
     <p class="c52 c51"><span class="c0"><a class="c26" href="{{ site.baseurl }}/syntax-lineparine/#h.fu5a2sef1dsi">5.5.
                 태</a></span><span class="c0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span
@@ -12535,7 +12535,7 @@
     <h2 class="c55 c51" id="h.9jj6fhigoaf"><span class="c86 c72">5.4. 동사연체형 명사</span></h2>
     <h3 class="c34" id="h.zczupmblhu55"><span class="c73 c72">5.4.1. 동사연체형 명사 (일반)</span></h3>
     <p class="c12"><span class="c2">동사연체형 명사</span><span>(또는 </span><span class="c2">동사파생명사</span><span
-            class="c0">)는 다음 어미를 사용해 만드는 명사이다. 다음 어미는 일반적, 전통적으로 사용되며, 동사로부터 여러 의미를 가진 명사를 만든다. (역주: 연체형은 우리말의 관형사형과 비슷한 개념이다.) </span></p>
+            class="c0">)는 동사에 다음 어미들을 부착하여 만든 명사이다. 다음 어미들은 일반적, 전통적으로 사용되어 왔으며, 동사로부터 여러 의미를 가진 명사를 만든다. (역주: 연체형은 우리말의 관형사형과 비슷한 개념이다.) </span></p>
     <p class="c12 c8"><span class="c0"></span></p><a id="t.28d655d144d12afd724a97339915724dd8eb826c"></a><a
         id="t.195"></a>
     <table class="c33">
@@ -12876,8 +12876,8 @@
     </table>
     <hr style="page-break-before:always;display:none;">
     <p class="c12 c8"><span class="c0"></span></p>
-    <h3 class="c34" id="h.7tuijk9gls6f"><span class="c73 c72">5.4.3. 명사를 받는 동사연체형 명사</span></h3>
-    <p class="c12"><span class="c0">동사연체형 명사는 그 동사가 명사를 취하는 상황에서 만들 수 있다.</span></p>
+    <h3 class="c34" id="h.7tuijk9gls6f"><span class="c73 c72">5.4.3. 명사를 취하는 동사연체형 명사</span></h3>
+    <p class="c12"><span class="c0">동사연체형 명사는 다른 명사를 취할 수도 있다.</span></p>
     <p class="c12 c8"><span class="c0"></span></p><a id="t.e2d0d542e33d7f366858826961cd07fd29115b54"></a><a
         id="t.199"></a>
     <table class="c9">
@@ -12943,7 +12943,7 @@
     </table>
     <p class="c12 c8"><span class="c0"></span></p>
     <p class="c12"><span
-            class="c0">동사연체형 명사가 동사연체형 명사를 받는 것도 가능하지만, 어느 것이 어느 것을 받는 지를 명확히 하는 것은 불가능하다. 이는 문맥으로부터 유추할 수 밖에 없다.</span></p>
+            class="c0">동사연체형 명사가 동사연체형 명사를 취하는 것도 가능하지만, 어느 것이 어느 것을 받는 지를 명확히 하는 것은 불가능하다. 이는 문맥으로부터 유추할 수 밖에 없다.</span></p>
     <p class="c12 c8"><span class="c0"></span></p><a id="t.598be3157c413f1448333877046905d481451d89"></a><a
         id="t.203"></a>
     <table class="c9">
