--- a/_layouts/slice.html
+++ b/_layouts/slice.html
@@ -100,9 +100,9 @@
 
   <body>
     <textarea id="inputText" rows="10" placeholder="Enter your text here"></textarea>
-    <label for="charLimit">Character Limit:</label>
+    <label for="charLimit">翻訳に必要なあまり意味のない日本語</label>
     <input type="number" id="charLimit" value="4000" min="1">
-    <button id="sliceButton">Slice Text</button>
+    <button id="sliceButton">これっきり！</button>
     <div id="pagination"></div>
     <pre id="output"></pre>
   </body>
